--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A postgrest client for admin-on-rest",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "cross-env NODE_ENV=production ./node_modules/.bin/babel ./src -d lib --ignore '*.spec.js'",
+    "publish": "npm run-script build && npm publish",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf lib"
   },
   "files": [
     "LICENSE",
@@ -30,12 +33,13 @@
   },
   "homepage": "https://github.com/tomberek/aor-postgres-client#readme",
   "dependencies": {
-    "admin-on-rest": "^0.7.0"
+    "admin-on-rest": ">=0.9.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-stage-0": "^6.16.0",
+    "cross-env": "^5.1.1"
   }
 }
